// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rectangle top left 1`] = `
Object {
  "height": 3,
  "start": Object {
    "col": 0,
    "row": 0,
  },
  "width": 4,
}
`;

exports[`Rectangle top right 1`] = `
Object {
  "height": 3,
  "start": Object {
    "col": 6,
    "row": 0,
  },
  "width": 4,
}
`;
